--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
   },
   "homepage": "https://github.com/iSkore/meme-generator#readme",
   "dependencies": {
-    "bootstrap": "^4.0.0-beta.6",
+    "bootstrap": "^4.0.0-beta",
     "jquery": "^3.2.1",
     "popper.js": "^1.12.5"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-es2015-modules-strip": "^0.1.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
