--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
   "homepage": "https://github.com/iSkore/meme-generator#readme",
   "dependencies": {
     "bootstrap": "^4.0.0-beta",
-    "jquery": "^3.0.0",
-    "popper.js": "^1.11.0"
+    "jquery": "^3.2.1",
+    "popper.js": "^1.12.5",
+    "swiper": "^4.0.0-beta.4"
   },
   "devDependencies": {
+    "autoprefixer": "^7.1.4",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-es2015-modules-strip": "^0.1.1",
@@ -41,7 +43,10 @@
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
     "json-loader": "^0.5.7",
+    "load-grunt-config": "^0.19.2",
     "node-sass": "^4.5.3",
+    "postcss-loader": "^2.0.6",
+    "precss": "^2.0.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "uglifyjs-webpack-plugin": "^0.4.6",
