--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
   "homepage": "https://github.com/iSkore/meme-generator#readme",
   "dependencies": {
     "bootstrap": "^4.0.0-beta",
+    "html2canvas": "^0.5.0-beta4",
     "jquery": "^3.2.1",
-    "popper.js": "^1.12.5",
-    "swiper": "^4.0.0-beta.4"
+    "popper.js": "^1.12.5"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.4",
