--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/iSkore/meme-generator#readme",
   "dependencies": {
     "bootstrap": "^4.0.0-beta",
+    "file-saver": "^1.3.3",
     "html2canvas": "^0.5.0-beta4",
     "jquery": "^3.2.1",
     "popper.js": "^1.12.5"
